feat(deploy): Full Azure production setup with Oracle DB and Security fixes
- Configured Oracle Wallet connection via Environment Variables
- Fixed JWT HexFormat parsing error causing 500 status
- Updated SecurityConfig to allow Swagger UI and /error endpoints
- Added OpenApiConfig for API documentation and Server definition
- Secured application.properties removing hardcoded credentials
- Updated .gitignore to exclude .azure and wallet files